--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
-  </body>
+          
+          <!-- BOOTSTRAP-JS-SUPPORT -->
   <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script> 
+  </body>
 </html>
 
