--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
 <h4>Bootstrap标题四<small>我是副标题</small></h4>
 <h5>Bootstrap标题五<small>我是副标题</small></h5>
 <h6>Bootstrap标题六<small>我是副标题</small></h6>
-
+<ul class="nav nav-tabs nav-justified">
+  <li class="active"><a href="##">Home</a></li>
+  <li><a href="##">CSS3</a></li>
+  <li><a href="##">Sass</a></li>
+  <li><a href="##">jQuery</a></li>
+  <li><a href="##">Responsive</a></li>
+</ul>
 <!--任务填写处-->
 
 <h3>孤儿院无私奉献30年<small> 一曲人性的赞歌</small></h3>
