--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <li><a href="##">Responsive</a></li>
 </ul>
 <!--任务填写处-->
-
+<a href="http://www.baidu.com">百度两下</a>
 <h3>孤儿院无私奉献30年<small> 一曲人性的赞歌</small></h3>
    <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-step-backward"></span></button>
     
