--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 <body>
-
+<a href="http://www.baidu.com">百度两下</a>
 <!--Bootstrap中使用了<small>标签来制作副标题-->
 <h1>Bootstrap标题一<small>我是副标题</small></h1>
 <h2>Bootstrap标题二<small>我是副标题</small></h2>
